Added files via upload

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- About Me -->
 <main>
   <section id="Home">
-  <img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/alyssa.jpg" alt="" /> 
+
     </section>
 
 </main>
@@ -49,6 +49,8 @@
 <!-- Body -->
 
 <section id="Resume">
+  
+    <img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/alyssa.jpg" alt="" /> 
 
   <h2>About Me</h2>
 
@@ -95,13 +97,14 @@
 </section>
 
 <!-- Portfolio -->
-<section class="portfolio">
-<a class="thumbnail Package"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/Package_Final.jpg" /><span class="title"></span></a>
-<a class="thumbnail red"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/poster_ad.png" /><span class="title"></span></a>
-<a class="thumbnail blue"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/phonetemplate.png" /><span class="title"></span></a>
-<a class="thumbnail purple"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/web_banner_as.jpg" /><span class="title"></span></a>
-<a class="thumbnail purple"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/Mooselodgeshirt.png" /><span class="title"></span></a>
-<a class="thumbnail purple"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/brand.jpg" /><span class="title"></span></a>
+<section id="Portfolio">
+  <h1>Portfolio</h1>
+<a class="thumbnail Package" href="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/Package_Final.jpg"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/Package_Final.jpg" /><span class="title"></span></a>
+<a class="thumbnail red" href="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/poster_ad.png"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/poster_ad.png" /><span class="title"></span></a>
+<a class="thumbnail blue" href="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/phonetemplate.png"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/phonetemplate.png" /><span class="title"></span></a>
+<a class="thumbnail purple" href="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/web_banner_as.jpg"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/web_banner_as.jpg" /><span class="title"></span></a>
+<a class="thumbnail purple" href="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/Mooselodgeshirt.png"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/Mooselodgeshirt.png" /><span class="title"></span></a>
+<a class="thumbnail purple" href="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/brand.jpg"><img src="https://raw.githubusercontent.com/ascheller93/ascheller93.github.io/master/img/Style_Tile/Img/brand.jpg" /><span class="title"></span></a>
 </section>
 </main>     <!-- End include from http://codepen.io/ascheller93/pen/OMzaxJ -->     <!-- End include from http://codepen.io/ascheller93/pen/gPoQzO -->     <!-- End include from http://codepen.io/ascheller93/pen/obpQam -->     <!-- End include from http://codepen.io/ascheller93/pen/qbpQQL -->
     
